<resources>
    <string name="app_name">User Management</string>
    <string name="user_avatar">user avatar</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="ingrese_email">Ingrese Email</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="agenda">Agenda</string>
    <string name="agregar_contacto">Agregar contacto</string>
    <string name="atras">Atras</string>
    <string name="add_contact">+</string>
    <string name="add_contact_description">Agregar Contacto</string>
    <string name="contacts">Contactos</string>
    <string name="list" />
    <string name="empty_message">No hay contactos, la lista está vacía.</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_apellido">Ingrese apellido</string>
    <string name="ingrese_domicilio">Ingrese domicilio</string>
    <string name="ingrese_el_n_mero_de_tel_fono">Ingrese el número de teléfono</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="domicilio">Domicilio</string>
    <string name="g_nero">Género</string>
    <string name="tel_fono">Teléfono</string>
    <string name="avatar">avatar</string>
    <string name="aun_no_tienes_contactos">Aun no tienes contactos</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="a_n_no_ten_s_contactos">Aun no tienes contactos</string>
    <string name="eliminar">Eliminar</string>
    <string name="contacto">Contacto</string>
    <string name="actualizar">Actualizar</string>
</resources>